fixed scrolling when mobile menu overflows

--- a/src/sass/structure/main-menu.scss
+++ b/src/sass/structure/main-menu.scss
@@ -40,6 +40,8 @@
         }
 
         &.active {
+          font-weight: 600;
+
           .main-menu__menu-link {
             &:after {
               transform: rotateZ(180deg);
@@ -62,6 +64,7 @@
               &.active {
                 max-height: 999px;
                 transition: all 0.6s ease;
+                margin-bottom: 4.9rem;
 
                 .main-menu__widget-name {
 
@@ -117,6 +120,30 @@
         transform: rotateZ(0);
         transform-origin: center;
       }
+    }
+
+    &-list {
+      display: flex;
+      flex-wrap: wrap;
+      margin-top: 2.1rem;
+      margin-bottom: 3.1rem;
+      gap: 1.9rem 2.2rem;
+
+      &-item {
+        width: 46%;
+        font-weight: 400;
+      }
+    }
+
+    &-link {
+      color: variables.$white;
+      font-family: Poppins, sans-serif;
+      font-size: 1.4rem;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+      font-weight: 400;
+      margin-left: 0.4rem;
     }
   }
 }
